--- a/templates/index.html
+++ b/templates/index.html
@@ -146,7 +146,7 @@
         </div>
     {% endif %}
     <footer>
-        &copy; 2025 Image Super-Resolution | Developed by Satyam Gupta
+        &copy; 2025 Image Super-Resolution 
     </footer>
 
     <script>
